# vimeo-channel-downloader

./: .gitignore  LICENSE  README.md  pyproject.toml  vimeodl.py
tests/: test_vimeodl.py
vimeodl/: __init__.py  __main__.py  vimeo.py
