[tool.poetry]
name = "vimeodl"
version = "0.1.0"
description = ""
authors = ["Evan <binary-signal@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"
bs4 = "^0.0.1"
vimeo_dl = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
